# foodie-wallet

./: .gitignore  Cargo.toml  foodiecat.db  readme.md
src/: main.rs
